2006-09-18  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Area.cpp, Mercator/Forest.h, Mercator/Surface.cpp,
	  Mercator/Surface.h, Mercator/TileShader.h: Add doc comments for
	  some members.

2006-09-18  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Area.cpp, Mercator/Area.h, Mercator/AreaShader.cpp,
	  Mercator/AreaShader.h, Mercator/BasePoint.h, Mercator/Buffer.h,
	  Mercator/DepthShader.h, Mercator/FillShader.h, Mercator/Forest.h,
	  Mercator/GrassShader.h, Mercator/RandCache.h, Mercator/Segment.cpp,
	  Mercator/ShaderFactory.h, Mercator/Surface.h,
	  Mercator/ThresholdShader.h, Mercator/TileShader.h: Add doc comments
	  for all compounds and types. Many members now to be done.

2006-09-17  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h, Mercator/Plant.h,
	  Mercator/Segment.cpp, Mercator/Segment.h, Mercator/Shader.h,
	  Mercator/Terrain.cpp, Mercator/Terrain.h, Mercator/TerrainMod.h:
	  Add doxygen comments documenting all members that area currently
	  reported as undocumented.

2006-09-17  Al Riddoch  <alriddoch@zepler.org>

	c Mercator/TerrainMod.h: Add some API documentation to the naughty
	  undocumented classes.

2006-08-11  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp: Ensure any subsequent species candidates
	  are skipped once the species for a given node has been instanced.

	* tests/testForest.cpp: Test the plant counts increase in the
	  expected proportions as species are added.

2006-08-11  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h: Shuffle the namespacing
	  around a little to make code less verbose and clearer.

	* tests/testForest.cpp: Add tests to cover the new species code.

2006-08-10  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h, Mercator/Plant.h:
	  First pass at re-implementing the forest code as a flexible
	  general case, rather than a quick hack.

2006-08-22  Al Riddoch  <alriddoch@zepler.org>
